[gd_scene load_steps=7 format=3 uid="uid://6jqmon4r3h48"]

[ext_resource type="StyleBox" uid="uid://bxkkepypipykx" path="res://src/scenes/dialog/dialog_back.tres" id="1_t15yu"]
[ext_resource type="Script" uid="uid://tly8q5lpe3ua" path="res://src/scenes/dialog/role_equip_dialog.gd" id="1_uoild"]
[ext_resource type="Theme" uid="uid://okeq2d56howe" path="res://theme/common.tres" id="2_idwfx"]
[ext_resource type="Script" uid="uid://dee063as2b3jr" path="res://src/scenes/widget/drag_control.gd" id="4_xl745"]
[ext_resource type="PackedScene" uid="uid://mbnmc3xs1636" path="res://src/scenes/dialog/bag_item.tscn" id="5_fus1g"]
[ext_resource type="PackedScene" uid="uid://ck22puk0vt35n" path="res://src/scenes/widget/close_button.tscn" id="6_74df0"]

[node name="RoleEquipDialog" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_uoild")

[node name="Back" type="Panel" parent="."]
layout_mode = 0
offset_right = 339.0
offset_bottom = 333.0
theme_override_styles/panel = ExtResource("1_t15yu")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 12.0
offset_right = 71.0
offset_bottom = 54.0
theme = ExtResource("2_idwfx")
text = "装备"

[node name="DragControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 644.0
offset_bottom = 55.0
script = ExtResource("4_xl745")

[node name="EquipContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 77.0
offset_right = 287.0
offset_bottom = 171.0

[node name="WeaponContainer" type="HBoxContainer" parent="EquipContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer/WeaponContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "武器："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer/WeaponContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="LongcoatContainer" type="HBoxContainer" parent="EquipContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer/LongcoatContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "上衣："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer/LongcoatContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="LongcoatContainer2" type="HBoxContainer" parent="EquipContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer/LongcoatContainer2"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "下衣："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer/LongcoatContainer2" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="CapConainer" type="HBoxContainer" parent="EquipContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer/CapConainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "帽子："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer/CapConainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="ShoesContainer" type="HBoxContainer" parent="EquipContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer/ShoesContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "鞋子："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer/ShoesContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="GloveContainer" type="HBoxContainer" parent="EquipContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer/GloveContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "手套："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer/GloveContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="EquipContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 318.0
offset_top = 77.0
offset_right = 592.0
offset_bottom = 416.0

[node name="ShieldContainer" type="HBoxContainer" parent="EquipContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer2/ShieldContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "盾牌："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer2/ShieldContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="CapeContainer" type="HBoxContainer" parent="EquipContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer2/CapeContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "披风："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer2/CapeContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="FaceContainer" type="HBoxContainer" parent="EquipContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer2/FaceContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "脸饰："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer2/FaceContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="EarringContainer" type="HBoxContainer" parent="EquipContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer2/EarringContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "耳饰："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer2/EarringContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="EyesContainer" type="HBoxContainer" parent="EquipContainer2"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer2/EyesContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "眼饰："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer2/EyesContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="NecklaceContainer" type="HBoxContainer" parent="EquipContainer2"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer2/NecklaceContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "项链："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer2/NecklaceContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="RingContainer" type="HBoxContainer" parent="EquipContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer2/RingContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "指环："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer2/RingContainer" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="RingContainer2" type="HBoxContainer" parent="EquipContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="EquipContainer2/RingContainer2"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "指环："
vertical_alignment = 1

[node name="BagItem4" parent="EquipContainer2/RingContainer2" instance=ExtResource("5_fus1g")]
layout_mode = 2

[node name="CloseButton" parent="." instance=ExtResource("6_74df0")]
layout_mode = 0
offset_left = 285.0
offset_top = 5.0
offset_right = 335.0
offset_bottom = 55.0

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
